--- a/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
+++ b/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
@@ -43,8 +43,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="DataContainer.cs" />
+    <Compile Include="ISortTrackData.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SortTrackData.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
