--- a/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
+++ b/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
@@ -43,6 +43,8 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollisionStatus.cs" />
+    <Compile Include="ICollisionStatus.cs" />
     <Compile Include="ITransponderReciever.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
