Worked on dataCalculator methods

--- a/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
+++ b/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
@@ -44,7 +44,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="CollisionStatus.cs" />
-    <Compile Include="DataContainerDTO.cs" />
+    <Compile Include="FlightDataDTO.cs" />
     <Compile Include="ICollisionStatus.cs" />
     <Compile Include="ITransponderReciever.cs" />
     <Compile Include="AirTrafficEvent.cs" />
