--- a/AirTrafficMonitoring_Test_unit/AirTrafficMonitoring_Test_unit.csproj
+++ b/AirTrafficMonitoring_Test_unit/AirTrafficMonitoring_Test_unit.csproj
@@ -55,10 +55,14 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TransponderReceiver">
+      <HintPath>..\TransponderReceiver.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DataCalculatorTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TransponderReceiverTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\SWT_Gruppe10_AirTraficMonitoring\SWT_Gruppe10_AirTraficMonitoring.csproj">
