A lot of changes around the world

--- a/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
+++ b/SWT_Gruppe10_AirTraficMonitoring/SWT_Gruppe10_AirTraficMonitoring.csproj
@@ -46,6 +46,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="CollidingFlightsDTO.cs" />
     <Compile Include="CollisionStatus.cs" />
     <Compile Include="FlightDataDTO.cs" />
     <Compile Include="ICollisionStatus.cs" />
