--- a/AirTrafficMonitoring_Test_unit/AirTrafficMonitoring_Test_unit.csproj
+++ b/AirTrafficMonitoring_Test_unit/AirTrafficMonitoring_Test_unit.csproj
@@ -62,6 +62,7 @@
   <ItemGroup>
     <Compile Include="CollisionStatusTest.cs" />
     <Compile Include="DataCalculatorTest.cs" />
+    <Compile Include="FilterTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TransponderReceiverTest.cs" />
   </ItemGroup>
